--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "graphql": "^16.6.0",
     "next": "^13.0.3",
     "react": "^18.2.0",
+    "react-collapsible": "^2.10.0",
     "react-dom": "^18.2.0",
     "react-loader-spinner": "^5.3.4",
+    "react-select": "^5.6.1",
     "sass": "^1.56.1",
     "typescript": "4.8.4"
   },
